feat: implement JVM and browser PDFium backends